--- a/HTML/code1.html
+++ b/HTML/code1.html
@@ -1,8 +1,4 @@
-<!-- tag  = <> -> open tag 
-data  
-tag = </> -> close tag -->
-
-<!-- ctrl + / -> comment -->
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -32,6 +28,24 @@ tag = </> -> close tag -->
     <h3>Lorem ipsum dolor sit amet.</h3>
 
     <i class="fa-solid fa-face-smile"></i>
+    <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit. Veniam aut minima dolore beatae voluptates
+        <hr>
+        incidunt
+        praesentium ad a, suscipit minus ab atque! Quis aut laudantium, quidem assumenda enim temporibus dolor.
+    </p>
+
+    <!-- <br>
+    <hr>
+    <img src="" alt="">
+    <input type="text"> -->
+
+    <!-- text =" " -->
 </body>
 
 </html>
+
+<!-- tag  = <> -> open tag 
+data  
+tag = </> -> close tag -->
+
+<!-- ctrl + / -> comment -->
