--- a/HTML/code3.html
+++ b/HTML/code3.html
@@ -8,6 +8,13 @@
 
 <body>
 
+    <span>Logo</span> &nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <span>Home</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <span>About</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <span>Contact</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <span>Services</span>
+
     <a href="https://ganeshdutt.netlify.app/">
         <img src="https://ganeshdutt.netlify.app/GaneshNewImagePhoneView2.png" alt="" width="300px">
     </a>
@@ -17,6 +24,17 @@
     <a href="https://ganeshdutt.netlify.app/" target="_blank">Ganehs Dutt</a>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, atque. Atque labore eius cupiditate nostrum
         quibusdam vel aliquid, temporibus sed eos? Optio, temporibus mollitia atque illum sequi autem fuga pariatur.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, atque. Atque labore eius cupiditate nostrum
+        quibusdam vel aliquid, temporibus sed eos? Optio, temporibus mollitia atque illum sequi autem fuga pariatur.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, atque. Atque labore eius cupiditate nostrum
+        quibusdam vel aliquid, temporibus sed eos? Optio, temporibus mollitia atque illum sequi autem fuga pariatur.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, atque. Atque labore eius cupiditate nostrum
+        quibusdam vel aliquid, temporibus sed eos? Optio, temporibus mollitia atque illum sequi autem fuga pariatur.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, atque. Atque labore eius cupiditate nostrum
+        quibusdam vel aliquid, temporibus sed eos? Optio, temporibus mollitia atque illum sequi autem fuga pariatur.</p>
+
+    <span>Lorem ipsum dolor sit amet.</span>
+    <span>Lorem ipsum dolor sit amet.</span>
 </body>
 
 </html>
