--- a/HTML/code5.html
+++ b/HTML/code5.html
@@ -18,17 +18,24 @@
         <tr>
             <td>Ganesh Dutt</td>
             <td>24</td>
-            <td>FS</td>
+            <td rowspan="3">FS</td>
         </tr>
         <tr>
             <td>Nutan</td>
             <td>21</td>
-            <td>FS</td>
+            <!-- <td>FS</td> -->
         </tr>
         <tr>
             <td>Sakshi</td>
             <td>21</td>
-            <td>Fs</td>
+
+        </tr>
+        <tr>
+            <td colspan="3">Footer</td>
+            <!-- <td>Footer</td> -->
+            <!-- <td>Footer</td> -->
+            <!-- <td>21</td> -->
+            <!--  -->
         </tr>
 
 
