--- a/HTML/Classes/code7.html
+++ b/HTML/Classes/code7.html
@@ -15,6 +15,7 @@
     <a href="https://ganeshdutt.netlify.app/">
         <i class="fa-brands fa-instagram" style="font-size: 30px;"></i>
     </a>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
     <video src="https://cdn.pixabay.com/video/2023/07/21/172655-847860558_tiny.mp4" width="400px" controls autoplay loop
         muted></video>
