--- a/CSS/code1.html
+++ b/CSS/code1.html
@@ -19,7 +19,7 @@
             padding-right: 50px;
             padding: 90px 113px 97px 133px;
             padding: 107px 92px; */
-            padding: 106px 126px 93px;
+            /* padding: 106px 126px 93px;
 
 
 
@@ -30,14 +30,52 @@
             margin-right: 50px;
             margin: 90px 113px 97px 133px;
             margin: 107px 92px;
-            margin: 106px 126px 93px;
+            margin: 106px 126px 93px; */
+        }
+
+        nav {
+            background-color: black;
+            color: white;
+            padding: 20px;
+        }
+
+        ul {
+            margin-left: 100px;
+            margin-top: -12px;
+        }
+
+        .list-2 {
+            margin-left: 100px;
+            margin-top: -15px;
+        }
+
+        .list-3 {
+            margin-left: 200px;
+            margin-top: -18px;
+
+        }
+
+        .list-4 {
+            margin-left: 300px;
+            margin-top: -20px;
+
         }
     </style>
 </head>
 
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est maxime deserunt iusto enim provident, eos vel
-        tempora cupiditate repudiandae? Quam veniam cumque animi aperiam eum quis odit vitae quae eos!</p>
+
+    <nav>
+        <div class="logo">Logo</div>
+        <ul>
+            <li class="list-1">Home</li>
+            <li class="list-2">About</li>
+            <li class="list-3">Contact</li>
+            <li class="list-4">Services</li>
+        </ul>
+    </nav>
+    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est maxime deserunt iusto enim provident, eos vel
+        tempora cupiditate repudiandae? Quam veniam cumque animi aperiam eum quis odit vitae quae eos!</p> -->
 </body>
 
 </html>
