--- a/CSS/code6.html
+++ b/CSS/code6.html
@@ -14,6 +14,20 @@
             /* background-color: black; */
         }
 
+        .box {
+            width: 300px;
+            height: 300px;
+            background-color: lightblue;
+
+            overflow: hidden;
+            /* overflow: auto; */
+            /* overflow: scroll; */
+
+            /* overflow-y: hidden;
+            overflow-x: hidden; */
+            /* text-overflow: ellipsis; */
+        }
+
         p {
             /* font-size: 20px;
             font-variant: normal;
@@ -31,14 +45,75 @@
             /* font-family: ; */
             /* color: black; */
             /* font-family: "Rubik 80s Fade", system-ui; */
+
+
+            text-align: center;
+            text-align: start;
+            text-align: end;
+
+            text-align: start;
+
+            /* text-decoration: underline; */
+            /* text-decoration: overline; */
+            /* text-decoration: line-through; */
+            text-decoration: none;
+
+            text-transform: capitalize;
+            text-transform: lowercase;
+            text-transform: uppercase;
+
+            /* text-overflow: ; */
+            text-shadow: 3px 4px 6px red;
+
+            text-indent: 100px;
+
+
+            white-space: nowrap;
+            /* white-space: wrap; */
+            overflow: hidden;
+
+            text-overflow: ellipsis;
+
+
+
+
+
+
+
+        }
+
+        .box {
+            width: 300px;
+            height: 300px;
+            background-color: lightblue;
+
+            overflow: hidden;
+            overflow: auto;
+            overflow: scroll;
+
+            overflow-y: hidden;
+            overflow-x: hidden;
         }
     </style>
 </head>
 
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quam tenetur cupiditate cum dolore, mollitia eius
-        voluptas, voluptate reprehenderit perspiciatis quos atque! Dolor ullam, asperiores aperiam maiores excepturi
-        reprehenderit eaque?</p>
+
+
+    <div class="box">
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, a iure cupiditate, obcaecati reiciendis
+            explicabo facere sed excepturi eaque nulla illum illo laudantium nam perferendis perspiciatis id veniam sint
+            dolorum!</p>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, a iure cupiditate, obcaecati reiciendis
+            explicabo facere sed excepturi eaque nulla illum illo laudantium nam perferendis perspiciatis id veniam sint
+            dolorum!</p>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, a iure cupiditate, obcaecati reiciendis
+            explicabo facere sed excepturi eaque nulla illum illo laudantium nam perferendis perspiciatis id veniam sint
+            dolorum!</p>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, a iure cupiditate, obcaecati reiciendis
+            explicabo facere sed excepturi eaque nulla illum illo laudantium nam perferendis perspiciatis id veniam sint
+            dolorum!</p>
+    </div>
 </body>
 
 </html>
