--- a/CSS/code7.html
+++ b/CSS/code7.html
@@ -42,10 +42,11 @@
     <nav>
         <div class="logo">Ganesh <span>Dutt</span></div>
         <ul>
-            <li>Home</li>
+            <li>Home🏠</li>
             <li>About</li>
             <li>Contact</li>
             <li>Services</li>
+
         </ul>
     </nav>
 </body>
