--- a/CSS/code6.html
+++ b/CSS/code6.html
@@ -94,6 +94,11 @@
             overflow-y: hidden;
             overflow-x: hidden;
         }
+
+        .item {
+            float: left;
+            margin-left: 10px;
+        }
     </style>
 </head>
 
@@ -114,6 +119,15 @@
             explicabo facere sed excepturi eaque nulla illum illo laudantium nam perferendis perspiciatis id veniam sint
             dolorum!</p>
     </div>
-</body>
+
+    <ul>
+        <li class="item">text1</li>
+        <li class="item">text2</li>
+        <li class="item">text3</li>
+    </ul>
+    <!-- <p class="item">Lorem </p>
+    <p class="item">Lorem </p>
+    <p class="item">Lorem </p>
+</body> -->
 
 </html>
